# llvm-project

./: .gitignore
clang/tools/: CMakeLists.txt
clang/tools/clang-metaparser/: CMakeLists.txt  MetaParserVersion.h  main.cpp
clang/tools/clang-metatools/: CMakeLists.txt  MetaDefines.cpp  MetaDefines.h  main.cpp
llvm/include/llvm/Transforms/Utils/MetaTools/: MetaTools.h
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/Utils/: CMakeLists.txt
